# ExplorerMonoRepo

./: .gitignore  README.md  dev.sh  init.sh  install.sh  migrate.sh  pyproject.toml  requirements.txt  test.sh
apps/flask-api/: __init__.py  config.py  wsgi.py
apps/flask_api/: __init__.py  app.py  config.py  middleware.py
apps/flask_api/routes/: __init__.py  route.py
libs/server/data_access/: __init__.py  database.py  model.py
libs/server/services/: __init__.py  service.py
libs/shared/consts/: __init__.py  env.py
libs/shared/data_transfer/: __init__.py  dto.py
libs/shared/utils/: __init__.py  http.py  json.py  utils.py
migrations/versions/: 0012e0004640_init.py  60f0eed06d83_add_trackable_to_api_key.py  dc61ac1e9b29_add_user_id_relationship_to_api_key.py
notebooks/: example_notebook.ipynb
tests/: conftest.py
