[tool.poetry]
name = "explorer_mono_repo"
version = "0.1.0"
description = "Flask API monorepo with shared libs and notebook support"
authors = ["Aram Hammoudeh <aram.devdocs@gmail.com>"]
packages = [
    { include = "libs" },
    { include = "apps" }
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restx = "^1.3.0"
flask-migrate = "^4.0.7"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pyjwt = "^2.9.0"
httplib2 = "^0.22.0"



[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
